--- a/src/main/resources/root/intelligentasteroidsshooter/restart-view.fxml
+++ b/src/main/resources/root/intelligentasteroidsshooter/restart-view.fxml
@@ -5,24 +5,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="root.intelligentasteroidsshooter.RestartViewController">
+<AnchorPane fx:id="restartPane" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="root.intelligentasteroidsshooter.RestartViewController">
    <children>
-      <Button fx:id="yesButton" layoutX="77.0" layoutY="455.0" mnemonicParsing="false" onAction="#onYesButtonClick" prefWidth="80.0" text="Yes" />
-      <Button fx:id="closeButton" layoutX="250.0" layoutY="455.0" mnemonicParsing="false" onAction="#onCloseButtonClick" prefWidth="80.0" text="Close Game" />
-      <VBox alignment="CENTER" layoutX="25.0" layoutY="5.0" prefHeight="446.0" prefWidth="350.0" spacing="10.0">
+      <Button fx:id="yesButton" layoutX="74.0" layoutY="530.0" mnemonicParsing="false" onMouseClicked="#onYesButtonClick" prefWidth="80.0" text="Yes" />
+      <Button fx:id="closeButton" layoutX="247.0" layoutY="530.0" mnemonicParsing="false" onMouseClicked="#onCloseButtonClick" prefWidth="80.0" text="Close Game" />
+      <VBox alignment="CENTER" layoutX="25.0" layoutY="18.0" prefHeight="494.0" prefWidth="350.0" spacing="10.0">
          <children>
             <Label fx:id="scoreText">
                  <font>
                      <Font size="18.0" />
                  </font>
              </Label>
+            <Label fx:id="recordTableLabel" text="Record Table">
+                <font>
+                    <Font size="24.0" />
+                </font>
+            </Label>
             <TableView fx:id="recordTable" prefHeight="308.0" prefWidth="350.0">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy></TableView>
             <HBox fx:id="newRecord" prefHeight="39.0" prefWidth="341.0">
                <children>
-                  <Label prefHeight="27.0" prefWidth="101.0" text="Your name:">
+                  <Label fx:id="yourName" prefHeight="27.0" prefWidth="101.0" text="Your name:">
                        <font>
                            <Font size="18.0" />
                        </font>
