--- a/src/main/resources/customStyles.css
+++ b/src/main/resources/customStyles.css
@@ -1,11 +1,9 @@
-
-
-.table-view .column-header .label {
+#recordTable .table-view .column-header .label {
     -fx-text-fill: white;
     -fx-font-weight: bold;
 }
 
-.table-view .scroll-bar * {
+#recordTable .table-view .scroll-bar * {
     -fx-min-width: 0;
     -fx-pref-width: 0;
     -fx-max-width: 0;
@@ -15,6 +13,10 @@
     -fx-max-height: 0;
 }
 
-#loadList .list-cell {
+#loadList .list-view .list-cell {
     -fx-alignment: center;
 }
+
+<TableView> id="recordTable"</TableView>
+
+<ListView> id="loadList"</ListView>
