--- a/src/main/resources/root/intelligentasteroidsshooter/start-view.fxml
+++ b/src/main/resources/root/intelligentasteroidsshooter/start-view.fxml
@@ -29,12 +29,12 @@
             </Label>
             <ImageView fitHeight="106.0" fitWidth="112.0" layoutX="244.0" layoutY="206.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/AIpic.png" />
+                  <Image url="@images/AIpic.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="110.0" fitWidth="112.0" layoutX="62.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/pepega.jpg" />
+                  <Image url="@images/pepega.jpg" />
                </image>
             </ImageView>
       
@@ -45,7 +45,7 @@
             </Label>
             <ImageView fitHeight="87.0" fitWidth="364.0" layoutX="23.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/main_title.png" />
+                  <Image url="@images/main_title.png" />
                </image>
             </ImageView>
          </children></Pane>
